--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
             <scope>compile</scope>
         </dependency>
 
+<!--        We need this depedency to extend the AbstractTestNGCucumberTests -->
+        <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-testng -->
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>1.2.5</version>
+        </dependency>
+
     </dependencies>
 
 </project>
